Fix overflow-wrap and reduce code mobile font-size.

--- a/src/scss/base/_common.scss
+++ b/src/scss/base/_common.scss
@@ -7,6 +7,7 @@ html {
   color: #333;
   font-size: 18px;
   line-height: 24px;
+  overflow-wrap: break-word;
 
   @include breakpoint($big) {
     font-size: 23px;
