--- a/src/scss/partials/_article.scss
+++ b/src/scss/partials/_article.scss
@@ -3,8 +3,8 @@
 
 %code {
   @extend %mono;
-  font-size: 14px;
-  line-height: 20px;
+  font-size: 12px;
+  line-height: 17px;
 
   @include breakpoint($big) {
     font-size: 16px;
